--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,76 @@
-:root {
-  --primary-color: #6003C3;
-  --white: #FFFFFF;
-  --box-color-1: #FCFF00;
-  --box-color-2: #57FFC9;
-  --box-color-3: #A5FF01;
-}
 
 body {
   font-family: 'Bebas Neue', Impact, sans-serif;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+header{
+  background-color: #6003C3;
+}
+
+h1{
+  font-size: 6em;
+  color: white;
+  padding: 50px 0;
+  text-align: center;
+}
+
+p{
+  font-size: 2em;
+  color: #6003C3;
+  text-align: center;
+  padding: 30px 0;
+}
+
+main{
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.boxes{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#box-1,
+#box-2,
+#box-3{
+  border: #6003C3 15px solid;
+  border-radius: 5px;
+  height: 200px;
+  width: 200px;
+  margin: 20px;
+  text-align: center;
+  color: #6003C3;
+  font-size: 3em;
+  box-shadow: 10px 10px 30px gray;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px 0;
+}
+
+#box-1{
+  background-color: #57FFC9;
+}
+
+#box-2{
+  background-color: #FCFF00;
+}
+
+#box-3{
+  background-color: #A5FF01;
+}
+
+@media only screen and (min-width: 768px) {
+
+  .boxes{
+    flex-direction: row;
+    justify-content: center;
+  }
+  }
